fix(YALB-520): fix spacing of download/target links
The underline for download and target blank links were a bit too long.
This makes them look much better.

--- a/web/profiles/custom/yalesites_profile/modules/custom/ys_links/css/ys_links.css
+++ b/web/profiles/custom/yalesites_profile/modules/custom/ys_links/css/ys_links.css
@@ -41,7 +41,7 @@ a.link--footer-link.ys_linked.link--with-icon {
 * little more */
 p a.link--with-icon.ys_linked.ys_download,
 p a.link--with-icon.ys_linked.ys_target-blank {
-  padding-right: var(--size-spacing-6);
+  padding-right: var(--size-spacing-5);
 }
 
 /* For those with a button, we move the button right so that it looks
